overlays/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
      - hosts:
        - learn-admin-dev.cicd.auzmor.com
        secretName: admin-portal-dev-dev-tls
  rules:
  - host: learn-admin-dev.cicd.auzmor.com
    http:
      paths:
        - backend:
            serviceName: admin-portal
            servicePort: 3000
